# django-rest-shoestore

./: db.sqlite3  pyproject.toml
api_app/: admin.py  models.py  serializers.py  views.py
api_app/management/commands/: bootstrap_data.py
api_app/migrations/: 0001_initial.py
shoestore/: settings.py  urls.py
